# ringbuf

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  asm.sh  build.rs  rustfmt.toml  test.sh
.github/workflows/: test.yml
async/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
async/.github/workflows/: test.yml
async/examples/: simple.rs  static.rs
async/src/: alias.rs  bench.rs  consumer.rs  counter.rs  halves.rs  index.rs  lib.rs  producer.rs  rb.rs  ring_buffer.rs  tests.rs  transfer.rs  wrap.rs
async/src/traits/: consumer.rs  mod.rs  observer.rs  producer.rs  ring_buffer.rs
async/src/wrap/: cons.rs  mod.rs  prod.rs
blocking/: Cargo.toml
blocking/src/: alias.rs  cons.rs  consumer.rs  halves.rs  index.rs  lib.rs  prod.rs  producer.rs  raw.rs  rb.rs  sync.rs  tests.rs  traits.rs  utils.rs  wrap.rs
blocking/src/wrap/: cons.rs  mod.rs  prod.rs
examples/: global_static.rs  message.rs  overwrite.rs  simple.rs  static.rs  test_ordering.rs
examples.old/: message.rs  simple.rs
old/: alias.rs  consumer.rs  producer.rs
old/benchmarks/: parts.rs
old/examples/: message.rs  simple.rs
old/ring_buffer/: base.rs  init.rs  local.rs  mod.rs  rb.rs  storage.rs
old/tests/: basic.rs  cached.rs  iter.rs  mod.rs  overwrite.rs
scripts/: bench.sh  miri.sh  test.sh
src/: alias.rs  asm.rs  benchmark.rs  benchmarks.rs  cache.rs  cached.rs  consumer.rs  counter.rs  error.rs  index.rs  init.rs  lib.rs  local.rs  observer.rs  producer.rs  raw.rs  rb.rs  ref_.rs  ring_buffer.rs  shared.rs  split.rs  storage.rs  stored.rs  tests.rs  transfer.rs  utils.rs
src/benchmarks/: base.rs  iter.rs  mod.rs  parts.rs  slice.rs
src/consumer/: async_.rs  global.rs  local.rs  mod.rs
src/consumer.old/: local.rs  mod.rs
src/counter/: async_.rs  atomic.rs  local.rs  mod.rs
src/halves/: based.rs  cached.rs  direct.rs  frozen.rs  macros.rs  mod.rs
src/halves/cached/: frozen.rs  mod.rs
src/producer/: async_.rs  global.rs  local.rs  mod.rs
src/rb/: base.rs  cached.rs  cons.rs  iter.rs  local.rs  macros.rs  mod.rs  prod.rs  shared.rs  traits.rs  utils.rs
src/rbs/: based.rs  init.rs  local.rs  mod.rs  ref_.rs  shared.rs  utils.rs
src/ring_buffer/: alias.rs  aliases.rs  async_.rs  atomic.rs  base.rs  basic.rs  cache.rs  counter.rs  init.rs  local.rs  mod.rs  owning.rs  rb.rs  self_.rs  shared.rs  storage.rs  traits.rs  wrap.rs
src/test/: access.rs  drop.rs  message.rs  mod.rs  multiple.rs  read_write.rs  single.rs
src/tests/: access.rs  async_.rs  base.rs  basic.rs  bench.rs  cached.rs  core_write.rs  drop.rs  fmt_write.rs  frozen.rs  hold.rs  init.rs  iter.rs  message.rs  mod.rs  new.rs  overwrite.rs  read_write.rs  shared.rs  skip.rs  slice.rs  unsized_.rs  zero_sized.rs
src/traits/: consumer.rs  delegate.rs  mod.rs  observer.rs  producer.rs  ring_buffer.rs  split.rs  utils.rs
src/wrap/: caching.rs  direct.rs  frozen.rs  mod.rs  traits.rs
