[workspace.package]
edition = "2021"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
homepage = "https://github.com/agerasev/ringbuf"
repository = "https://github.com/agerasev/ringbuf.git"
readme = "README.md"
license = "MIT/Apache-2.0"

[workspace.dependencies]
ringbuf = { path = ".", version = "0.4.4" }

[workspace]
members = ["async", "blocking"]

[package]
name = "ringbuf"
version = "0.4.4"
edition.workspace = true
authors.workspace = true
description = "Lock-free SPSC FIFO ring buffer with direct access to inner data"
documentation = "https://docs.rs/ringbuf"
repository.workspace = true
keywords = ["lock-free", "spsc", "ring-buffer", "rb", "fifo"]
categories = ["concurrency", "data-structures", "no-std"]
license.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []
bench = []
test_local = []

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }

[dev-dependencies]
once_mut = "0.1.0"

[[example]]
name = "simple"
required-features = ["alloc"]

[[example]]
name = "overwrite"
required-features = ["alloc"]

[[example]]
name = "message"
required-features = ["std"]

[[example]]
name = "test_ordering"
required-features = ["std"]
