[package]
name = "async-ringbuf"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
description = "Async SPSC FIFO ring buffer"
documentation = "https://docs.rs/async-ringbuf"
repository.workspace = true
keywords = ["async", "spsc", "ring-buffer", "rb", "fifo"]
categories = ["asynchronous", "concurrency", "data-structures", "no-std"]
license.workspace = true
resolver = "2"

[features]
default = ["alloc", "std"]
alloc = ["ringbuf/alloc"]
std = ["alloc", "ringbuf/std", "futures/std"]
bench = ["std"]

[dependencies]
ringbuf = { workspace = true }
futures = { version = "0.3.30", default-features = false }

[dev-dependencies]
futures = { version = "0.3.30", features = ["executor", "thread-pool"] }
tokio = { version = "1.37.0", features = ["full"] }

[[example]]
name = "simple"
required-features = ["alloc"]
