[package]
name = "async-ringbuf"
version = "0.3.4"
edition.workspace = true
authors.workspace = true
description = "Async SPSC FIFO ring buffer"
documentation = "https://docs.rs/async-ringbuf"
repository.workspace = true
keywords = ["async", "spsc", "ring-buffer", "rb", "fifo"]
categories = ["asynchronous", "concurrency", "data-structures", "no-std"]
license.workspace = true
resolver = "2"

[features]
default = ["alloc", "std"]
alloc = ["ringbuf/alloc"]
std = ["alloc", "ringbuf/std", "futures-util/io"]
portable-atomic = [
    "ringbuf/portable-atomic",
    "futures-util/portable-atomic",
    "dep:portable-atomic",
    "dep:portable-atomic-util",
]
bench = ["std"]

[dependencies]
ringbuf = { workspace = true }
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
] }
portable-atomic = { version = "1", optional = true }
portable-atomic-util = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
futures = { version = "0.3.31", features = ["executor", "thread-pool"] }
tokio = { version = "1.37.0", features = ["full"] }

[[example]]
name = "simple"
required-features = ["alloc"]
