[package]
name = "ringbuf-blocking"
version = "0.1.0-rc.5"
edition.workspace = true
authors.workspace = true
description = "Blocking version of ringbuf"
documentation = "https://docs.rs/ringbuf-blocking"
repository.workspace = true
keywords = ["blocking", "spsc", "ring-buffer", "rb", "fifo"]
categories = ["concurrency", "data-structures"]
license.workspace = true

[features]
default = ["std"]
alloc = ["ringbuf/alloc"]
std = ["ringbuf/std", "alloc"]
portable-atomic = [
    "ringbuf/portable-atomic",
    "dep:portable-atomic",
    "dep:portable-atomic-util",
]

[dependencies]
ringbuf = { workspace = true }
portable-atomic = { version = "1", default-features = false, optional = true }
portable-atomic-util = { version = "0.2", default-features = false, optional = true }
